--- a/.gitignore
+++ b/.gitignore
@@ -284,6 +284,7 @@ FakesAssemblies/
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
 node_modules/
+content/
 .env
 
 # Visual Studio 6 build log
@@ -387,7 +388,7 @@ FodyWeavers.xsd
 
 # Local History for Visual Studio Code
 .history/
-
+content/
 # Windows Installer files from build outputs
 *.cab
 *.msi
