--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "final-form": "^4.20.9",
     "html5-qrcode": "^2.3.8",
+    "moment": "^2.29.4",
     "qrious": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
